--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "dayjs": "^1.11.13",
     "vant": "^4.9.20",
     "vue": "^3.5.13",
     "xlsx": "^0.18.5"
