--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "devDependencies": {
     "@types/chrome": "^0.0.320",
     "@types/dom-navigation": "^1.0.3",
+    "@vue/runtime-core": "^3.5.17",
     "@wxt-dev/module-vue": "^1.0.2",
     "typescript": "^5.5.2",
+    "vue-tsc": "2.2.10",
     "wxt": "^0.19.27"
   }
 }
